# ChangeLog for media-libs/a52dec
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.75 2015/03/02 09:34:06 ago Exp $

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> a52dec-0.7.4-r7.ebuild:
  Stable for ppc, wrt bug #525754

  16 Jan 2015; Raúl Porcel <armin76@gentoo.org> a52dec-0.7.4-r7.ebuild:
  alpha/ia64/sh/sparc/x86 stable wrt #525754

  22 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> a52dec-0.7.4-r7.ebuild:
  amd64 stable wrt bug #525754

  20 Dec 2014; Markus Meier <maekke@gentoo.org> a52dec-0.7.4-r7.ebuild:
  arm stable, bug #525754

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> a52dec-0.7.4-r7.ebuild:
  Stable for HPPA (bug #525754).

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> a52dec-0.7.4-r7.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  13 Oct 2013; Michał Górny <mgorny@gentoo.org> a52dec-0.7.4-r7.ebuild:
  Explicitly call einstalldocs in multilib_src_install_all() to accomodate bug
  #483304.

*a52dec-0.7.4-r7 (10 Aug 2013)

  10 Aug 2013; Alexis Ballier <aballier@gentoo.org> +a52dec-0.7.4-r7.ebuild:
  Convert to multilib, stop installing a52_internal that shouldnt be needed nor
  used, stack it for medialibs r9

  02 May 2013; Samuli Suominen <ssuominen@gentoo.org> a52dec-0.7.4-r6.ebuild:
  Fix automake-1.13 compability wrt #466978 by Alphat-PC and Thomas. Remove
  unnecessary epunt_cxx call (unnecessary when eautoreconf is executed to
  modernize files)

  17 May 2012; Alexis Ballier <aballier@gentoo.org> a52dec-0.7.4-r6.ebuild:
  keyword ~amd64-fbsd

  17 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  a52dec-0.7.4-r6.ebuild:
  keyword ~sparc-solaris

  04 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> a52dec-0.7.4-r6.ebuild:
  USE="static-libs" and punt useless libtool archive.

  26 Jul 2010; Magnus Granberg <zorry@gentoo.org> a52dec-0.7.4-r6.ebuild,