@@ -7,23 +7,13 @@ AUX a52dec-0.7.4-test-hidden-symbols.patch 637 SHA256 eb49d33c59529a6fb790743f19
 AUX a52dec-0.7.4-tests-optional.patch 299 SHA256 d0dd7ad5d6f070ef385bf76ff48e1d54be7cb9d5ba3d7d71e5b1b4657bdfb9ba SHA512 9f5c0afbfd656287eafeba04eed34070f53a77cb53981d64ff71edb96bef6cc2c0638e0be6647086cbad87ead97aa0215cd6cb413258d0122bc3f45bcf4480b1 WHIRLPOOL b266bec3f0c253f39f58523012157572f1cd4621fc7fda2e2fea7c290956c92e968d7ae8d707e51ba682ecc390c15fb255ecc9536e35ea75715b29fec056a95f
 DIST a52dec-0.7.4.tar.gz 241507 SHA256 a21d724ab3b3933330194353687df82c475b5dfb997513eef4c25de6c865ec33 SHA512 4b26fe9492f218b775fb190b76ecf06edaeb656adfe6dcbd24d0a0f86871c3ba917edb88a398eb12dccedaa1605b6f0a0be06b09f9fddd9a46e457b7dd244848 WHIRLPOOL 6dd6454f88ab9c4d80374ac2019d4392765fb3fffc54e0f0367f5c1a7ec31bb38b8b817e05fa195bf4ff83c59adf51872a93e4d61ffcb1e723e13e4a6288bf32
 EBUILD a52dec-0.7.4-r6.ebuild 1550 SHA256 7597c0078099f06aec271eca2f212e0f063e960b36a45e7e9af750844b375976 SHA512 feb592cb849941308928cda215bdaec0a937e2187301925e99cc85840f4812bdba856291e68b26904393cb198f9280d22b4b9bcdf243a8dd200f13daed15c287 WHIRLPOOL 88c14daf294c0d65c93bd71087473634ee9343eef051b4c2eccdecf6e9ad63d4c0b28ffb5a9aef1ab342fe2818ca262d2734bff9450e1bc19d4e069a9c342246
-EBUILD a52dec-0.7.4-r7.ebuild 1764 SHA256 b0d69f08a56c0c6834b22de656b20e5283313964db8b9664ff9ab76cd5c92ca9 SHA512 a22999bfcab471731b5a2aff656b5365211763d4f292bb26484b363a534a4a6eeb55c90dfb5d2f8898ceecabc5a8401d30f47fe67a15fd904949320e77aa3e20 WHIRLPOOL 83bfbd04c7b00c5bcfc44c8ac9b76fd59bc27e83bc93cef4fe1b8a97d2883bfa6161968b466bccc0e8c32612e9b5e1b257b802a3a8303a42381bce5fd1e1a407
-MISC ChangeLog 10615 SHA256 b28f859503c1345b77cc3683db00b64659ab0c1fc123fc3f18239646e8e40b5c SHA512 050fa8fbea16309aa89032b8e6eef4a9644f7721803d131e1c16a8b086df5e5b1bee2af58def59bd8ce82db70ad977731e58d1d9e859e4bd802dfc0dc8c697c9 WHIRLPOOL 9e3c58d0b3edde90b56213833b472ece5f1f723549335a985e05d5d421c1e8d4115c91834e1fc9c37ab7a333f026ae4c7963f87df1a61815b359041f5f4df088
+EBUILD a52dec-0.7.4-r7.ebuild 1763 SHA256 c67e3263c7ecd20e5d1876ae7a3e6fb9b575e66f3a66c850f33dcbba70dab778 SHA512 c3e04f7f8bc40bdd4f054e32688356f529c7b5bc3815d41b8506d280d8103176dd55dee1c35ef8dce9f19a395d4b1ec84a3fc7e7ec4dc8aac6b0351696853119 WHIRLPOOL ec506dca6be488e0363ab594d5811791691d765dd3b033c80c8b8633de80385196a06b6479b68dfe35c77805c9566c75d6cc118db818c438a10b0d2a43ed11f9
+MISC ChangeLog 10721 SHA256 dcdcd907031e864f0e8134166a201be10be86aa969aaf73bee171c2339411f45 SHA512 962312b8df18d18c397833ddd8c9f81de3387a989afd824464509f3185f5a9bede5f83a758038bdf03bf5ecec6e79da48d665341f134297506855d9e4d61ccd8 WHIRLPOOL 8628051fa34ba1a40549a0b6815474c76dfc4f662862e726e4e04d398c8e950a64296e54887b53215369ad7c69f813f82b8a062cd11b8561b571aeead0bd633a
 MISC metadata.xml 263 SHA256 938b5d7b1489d64aa1d2479633cc25916bc5381e6a080dd96a7b339ea7690d24 SHA512 1b3b7febb23df0c26017e20dec60e7f866d494f8a3ec082f8f8e97c5a9637214d2dffe80424509d1815213c3c75e9bf959466d9eb2530e7e1f50b6d07d48f2d4 WHIRLPOOL 01e0f1e1fcddd08f9123af34fa01dba7780a2bdfee481e99c7746e0aa7119f54f339d5d7a236b569fd837a535cbc288b92e9301a9114dd3573edeaca6d34d74e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9C6PAAoJELp701BxlEWfB8cP/A+XBfmWZSBzgTu8hxkU1RL6
-fGTzhoc6nzkFLyZfsDkR0VrmPECzKrMaD4zBbY+OfRpL5a1ioeqzpyk0SXokkiWT
-fTZDi/VekPPDl6iAjGVtFRYTPdiSj/IEsrqo3t4gnS37GvDK9Ufu7FNEa1rgg36r
-e69A26FbrMp/yQ+/7FX9KOfBGTlkP2/xwcbSpmsXwfijuULFDIrz/EXX7KIxxb8l
-X0fsXm9HlmIRGvOQVbGFQlLDGDhQpdacd/eaSxY0RmSaU5MhdQif6H02H2vTnNeu
-LH3R/N6p4S4q82OhzrKQEMt1rsJGz1kH9CZsMEEehx7x51vASrPGS6er+AIH46+Y
-QBJPOZn0G4OkrNoZsmyFJgpcKmIlpFzHXShy055yQYUbZvPuhHk5dmPZUBpjYR4a
-YPDk8G1qc8dZ+uVPB1398nB8To5bXp5pRfeXG18VnUyVxmjWeoI2N22HdJ8wNVJm
-eUs344QrfqiRzUFvrrl+J3RIsbJzljnmLIE9S4IsXA1AbWVN8vLXHCVv6YWalXgK
-2Kf5jHeCd1ToSvgG9vvjH+D3+2UP7DklBS6qUEYfULbimOFIctV8McB67dVEo5go
-BcisHRRv7ti1OLnaQZnfiiTu+oUX35CrT4Z3rMSu6KKRMVWaWm4y9XZYKGmVaEUe
-eveehxFyKtAIkQsjXcT5
-=yXJC
+iEYEAREIAAYFAlVIlgEACgkQVWmRsqeSphN2pwCeLnNHFSVR0Wv929n3VoR5v0Q2
+zssAn3sZ9IrYcuzFyXTRw9C8el1d1poV
+=FiVG
 -----END PGP SIGNATURE-----
