@@ -4,11 +4,11 @@ DESCRIPTION=scans log files and bans IPs that show malicious signs
 EAPI=5
 HOMEPAGE=http://www.fail2ban.org/
 IUSE=selinux systemd python_targets_python2_7 python_targets_python3_3 python_targets_python3_4 python_targets_pypy
-KEYWORDS=~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
+KEYWORDS=~amd64 ~arm hppa ~ppc ppc64 ~sparc ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=net-misc/whois virtual/mta virtual/logger net-firewall/iptables selinux? ( sec-policy/selinux-fail2ban ) systemd? ( sys-apps/systemd[python] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) python_targets_pypy? ( virtual/pypy:0= ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_pypy(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),-python_single_target_pypy(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 python_targets_python3_4 python_targets_pypy )
 SLOT=0
 SRC_URI=https://github.com/fail2ban/fail2ban/tarball/0.9.2 -> fail2ban-0.9.2.tar.gz
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=50416c4a9e4e2c50df12070d1dfff566
+_md5_=9de81a1c1d15fdf90ec047b3e4415509
