@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/fail2ban
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.157 2015/04/30 16:24:20 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.158 2015/05/05 10:19:05 jer Exp $
+
+  05 May 2015; Jeroen Roovers <jer@gentoo.org> fail2ban-0.9.2.ebuild:
+  Stable for HPPA PPC64 (bug #548642).
 
 *fail2ban-0.9.2 (30 Apr 2015)
 
