@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/a52dec
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.75 2015/03/02 09:34:06 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/a52dec/ChangeLog,v 1.76 2015/05/05 10:05:52 jer Exp $
+
+  05 May 2015; Jeroen Roovers <jer@gentoo.org> a52dec-0.7.4-r7.ebuild:
+  Stable for PPC64 (bug #525754).
 
   02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> a52dec-0.7.4-r7.ebuild:
   Stable for ppc, wrt bug #525754
